# ffmpeg

./: CMakeLists.txt  README.md  ffmpeg编译脚本.sh  libx264编译脚本.sh  transcode.cpp  transcode.h  transcode_test.cpp
